Add Jmol applet

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages and added jsmol files.</p>
+<script>
+    var Info = {
+        color: "#FFFFFF",
+        height: 300,
+        width: 300,
+        script: "load $caffeine",
+        use: "HTML5",
+        j2sPath: "j2s",
+        serverURL: "php/jsmol.php",
+    }
+</script>
+
 </body>
 
 </html>
