--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         use: "HTML5",
         j2sPath: "j2s",
         serverURL: "php/jsmol.php",
-    }
+    };
+    Jmol.getApplet("Jmol_A", Info);
 </script>
 
 </body>
