--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <script>
     var Info = {
         color: "#FFFFFF",
-        height: 300,
-        width: 300,
+        height: 400,
+        width: 400,
         script: "load $caffeine",
         use: "HTML5",
-        j2sPath: "j2s",
-        serverURL: "php/jsmol.php",
+        j2sPath: "jsmol/j2s",
+        serverURL: "jsmol/php/jsmol.php",
     };
     Jmol.getApplet("Jmol_A", Info);
 </script>
