--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p>I'm hosted with GitHub Pages and added jsmol files.</p>
 <script>
     var Info = {
-        color: "#FFFFFF",
+        color: "#000000",
         height: 400,
         width: 400,
         script: "load $caffeine",
@@ -21,7 +21,7 @@
     };
     Jmol.getApplet("Jmol_A", Info);
 </script>
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4BOVUttcRYnGGDdJDsQh9DfnrNwff_PiIBQb1i8xMkP-rRw/viewform?embedded=true" width="640" height="1730" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </body>
 
 </html>
