--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
 <head>
 <meta charset="utf-8">
 <script type="text/javascript" src="jsmol/JSmol.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
 </head>
 
 <body>
-<h1>Hello World</h1>
+<h1>iRoT - interactive Rotations Test</h1>
 <p>I'm hosted with GitHub Pages and added jsmol files.</p>
 <script>
     var Info = {
         color: "#000000",
         height: 400,
         width: 400,
-        script: "load $caffeine",
+        src: "models/C2OCl.xyz",  //carrega um modelo no local definido
+//        script: "load $caffeine", //executa um script quando termina de carregar. Atropela o src.
         use: "HTML5",
         j2sPath: "jsmol/j2s",
         serverURL: "jsmol/php/jsmol.php",
     };
     Jmol.getApplet("Jmol_A", Info);
 </script>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4BOVUttcRYnGGDdJDsQh9DfnrNwff_PiIBQb1i8xMkP-rRw/viewform?embedded=true" width="640" height="1730" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<!-- embed do google forms 
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4BOVUttcRYnGGDdJDsQh9DfnrNwff_PiIBQb1i8xMkP-rRw/viewform?embedded=true" width="640" height="1730" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+-->
 </body>
 
 </html>
