--- a/blankpage.html
+++ b/blankpage.html
@@ -5,14 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--define largura da pagina apropriada (pc/mobile)-->
   <meta http-equiv="X-UA-Compatible" content="ie-edge"> <!--não sei o que faz direito-->
-  <title>Testes do iRoT</title>
+  <title>Blank</title>
   <link rel="stylesheet" href="css/screen.css" /> <!--aponta arquivo .css -->
   <script type="text/javascript" src="jsmol/JSmol.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
 </head>
 
 <body>
-  Aqui é a página 1.
+  Página em branco.
 </body>
 
 </html>
