--- a/index.html
+++ b/index.html
@@ -3,53 +3,25 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--define largura da pagina apropriada (pc/mobile)-->
-    <meta http-equiv="X-UA-Compatible" content="ie-edge"> <!--não sei o que faz direito-->
-    <title>Testes do iRoT</title>
-    <link rel="stylesheet" href="css/screen.css" /> <!--aponta arquivo .css -->
-    <script type="text/javascript" src="jsmol/JSmol.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
-    <script>
-        var Info = {
-            color: "#000000",
-            height: 400,
-            width: 400,
-            src: "models/C2OCl.xyz",  //carrega um modelo no local definido
-    //        script: "load $caffeine", //executa um script quando termina de carregar. Atropela o src.
-            use: "HTML5",
-            j2sPath: "jsmol/j2s",
-            serverURL: "jsmol/php/jsmol.php",
-        };
-    </script>
-   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie-edge"> <!--entender melhor-->
+    <title>Minha "casa"</title>
+    <link rel="stylesheet" href="css/screen.css" />
 </head>
 
 <body>
-    <h1>iRoT - interactive Rotations Test</h1>
-    <p>Estou hospedado @ GitHub Pages :)</p>
-    <a href="page1.html">Page 1</a>
-    <script>Jmol.getApplet("Jmol_A", Info)</script>
-    
-    <div id="demo", style="background-color: Navy">Div Teste</div>
-    <button type="button" onclick="button1()">Button1</button>
-    <button type="button" onclick="button2()">Button2</button>
+    <h1>Página de rodrigocns</h1>
+    <p>Hospedado @ GitHub Pages :)</p><br><br><br>
 
+    <div>
+        <h2>iRoT - interactive Rotations Test</h2>
+        <a href="testes.html">Testes</a>
+        <a href="page1.html">Pag 1</a>
+        <a href="page2.html">Pag 2</a>
+        <a href="page3.html">Pag 3</a>
+        <a href="testes.html">testes</a>
+    </div>
 
-
-    <script>
-        function button1() {
-            var teste = Jmol.getPropertyAsString(Jmol_A, 'orientationInfo.quaternion');
-            document.getElementById('demo').innerHTML = teste;
-        }
-        function button2() {
-            var teste = Jmol.getPropertyAsString(Jmol_A, 'orientationInfo.quaternion');
-            alert(teste);
-        }
-    </script>
-
-<!-- embed do google forms 
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4BOVUttcRYnGGDdJDsQh9DfnrNwff_PiIBQb1i8xMkP-rRw/viewform?embedded=true" width="640" height="1730" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
--->
 </body>
 
 </html>
