--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <title>iRoT</title>
-  <link rel="stylesheet" href="css/screen.css" />
+  <link rel="stylesheet" href="css/screen.css" type="text/css" />
   <script type="text/javascript" src="jsmol/JSmol.min.js"></script>
   <script type="text/javascript" id="jmol_info">
     var Info = {
