--- a/testes.html
+++ b/testes.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="jsmol/JSmol.min.js"></script>
     <!-- testar link abaixo  com funcoes do js
     <link rel="scripts" href="scripts.js" /> -->
-    <script>
+    <script id="jmol_info">
         var Info = {
             color: "#000000",
             height: 400,
@@ -29,6 +29,20 @@
     <h1>Página teste</h1>
     <p>Hospedado @ GitHub Pages :)</p>
     <a href="index.html">Home</a>
+    <?php
+    $txt = "W3Schools.com";
+    echo "I love $txt!";
+    ?>
+    <div> <!--https://github.com/levinunnink/html-form-to-google-sheet-->
+        <form 
+            method="POST"
+            action="https://script.google.com/macros/s/AKfycbz2mtmCVBgwyvkvBiYEssGqT2wT0KjEmQciu48oe2Ve5ck1fVAFm774iEfXnzpnMoG4sQ/exec"
+        > 
+            <input name="Email" type="email" placeholder="Email" required>
+            <input name="Name" type="text" placeholder="Name" required>
+            <Button type="submit">Send</Button>
+        </form>
+    </div>
     <script>Jmol.getApplet("Jmol_A", Info)</script>
     
     <div id="demo", style="background-color: Navy">Div Teste</div>
