--- a/index.html
+++ b/index.html
@@ -2,25 +2,27 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie-edge"> <!--entender melhor-->
-    <title>Minha "casa"</title>
-    <link rel="stylesheet" href="css/screen.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie-edge"> <!--entender melhor-->
+  <title>Minha "casa"</title>
+  <link rel="stylesheet" href="css/screen.css" />
 </head>
 
 <body>
-    <h1>Página de rodrigocns</h1>
-    <p>Hospedado @ GitHub Pages :)</p><br><br><br>
-
-    <div>
-        <h2>iRoT - interactive Rotations Test</h2>
-        <a href="testes.html">Testes</a>
-        <a href="page1.html">Pag 1</a>
-        <a href="page2.html">Pag 2</a>
-        <a href="page3.html">Pag 3</a>
-        <a href="testes.html">testes</a>
-    </div>
+  <h1>Página de rodrigocns</h1>
+  <p>Hospedado por GitHub Pages @ <a href="rodrigocns.github.io">rodrigocns.github.io</a>
+    :)</p>
+  <br><br><br>
+  <div>
+    <h2>iRoT - interactive Rotations Test</h2>
+    <a href="page1.html">Pag 1(nop)</a>
+    <a href="page2.html">Pag 2</a>
+    <a href="page3.html">Pag 3</a>
+    <br>
+    <a href="teste.html">Teste</a>
+    <a href="teste2.html">Teste2</a>
+  </div>
 
 </body>
 
