General updates. Base iRoT ready.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <br><br><br>
   <div>
     <h2>iRoT - interactive Rotations Test</h2>
-    <a href="page1.html">Pag 1</a>
-    <a href="page2.html">Pag 2</a>
+    <a href="page1.html">Teste Novo</a>
+    <a href="page2.html">Teste Velho</a>
     <br>
     <a href="teste.html">Teste</a>
     <a href="teste2.html">Teste2</a>
