--- a/teste.html
+++ b/teste.html
@@ -29,19 +29,11 @@
     <h1>Página teste</h1>
     <p>Hospedado @ GitHub Pages :)</p>
     <a href="index.html">Home</a>
-    <?php
-    $txt = "W3Schools.com";
-    echo "I love $txt!";
-    ?>
-    <div> <!--https://github.com/levinunnink/html-form-to-google-sheet-->
-        <form 
-            method="POST"
-            action="https://script.google.com/macros/s/AKfycbz2mtmCVBgwyvkvBiYEssGqT2wT0KjEmQciu48oe2Ve5ck1fVAFm774iEfXnzpnMoG4sQ/exec"
-        > 
-            <input name="Email" type="email" placeholder="Email" required>
-            <input name="Name" type="text" placeholder="Name" required>
-            <Button type="submit">Send</Button>
-        </form>
+    
+    <div>
+        <!--https://www.encodedna.com/javascript/practice-ground/default.htm?pg=save_form_data_in_text_file_using_javascript-->
+        <!-- save localfile -->
+
     </div>
     <script>Jmol.getApplet("Jmol_A", Info)</script>
     
