Change to files and new file for local tasks.

--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie-edge"> <!--entender melhor-->
-  <title>Minha "casa"</title>
+  <title>"Casa" de rodrigocns</title>
   <link rel="stylesheet" href="css/screen.css" />
 </head>
 
 <body>
-  <h1>Página de <a href="https://github.com/rodrigocns/rodrigocns.github.io">rodrigocns</a></h1>
-  <p>Hospedado por GitHub Pages @ <a href="https://rodrigocns.github.io">rodrigocns.github.io</a>
-    :)</p>
+  <h1><a href="https://rodrigocns.github.io">Página de rodrigocns</a></h1>
+  <p>Hospedado por GitHub Pages @ <a href="https://github.com/rodrigocns/rodrigocns.github.io">rodrigocns.github.io</a>    :)</p>
   <br><br><br>
   <div>
     <h2>iRoT - interactive Rotations Test</h2>
-    <a href="page1.html">Teste Novo</a>
-    <a href="page2.html">Teste Velho</a>
+    <a href="task_online.html">Teste Novo</a> salvo online.
+
     <br>
+    <br>
+    <br>
+    <h2>Arquivo/Misc.</h2>
+    <a href="task_old.html">Teste Velho</a>
     <a href="teste.html">Teste</a>
     <a href="teste2.html">Teste2</a>
   </div>
