Added task_local to index. Updated task_local
Index:
Added task_local link to index.
task_local:
limited user control of JSmol applet. Only object XY rotations allowed now.
Added site button for JSmol console.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <div>
     <h2>iRoT - interactive Rotations Test</h2>
     <a href="task_online.html">Teste Novo</a> salvo online.
-
+    <br>
+    <a href="task_local.html">Teste Novo(wip)</a> salvo offline.
     <br>
     <br>
     <br>
