Change style naming
Change class name: canva_margin > table_margin
Removed an unecessary css line.

--- a/task_local.html
+++ b/task_local.html
@@ -58,7 +58,7 @@
   </section>
   <section id="tab_teste" class="stage" style="display:none">  <!-- O TESTE -->
     <br>
-    <div class="canva_margin" width="100%"> <!--margem clara-->
+    <div class="table_margin" width="100%"> <!--margem clara-->
       <br><br><br>
     </div>
     <div class="debug" id="indicador_orientacao" style="background-color:gray">Test</div> <!--coordenadas de orientacao-->
@@ -91,7 +91,7 @@
       </tr>
     </table>
     <div class="debug" id=jsmol_molecula_console>Console (wip)</div>
-    <div class="canva_margin" width="500px"><br><br><br></div>
+    <div class="table_margin" width="500px"><br><br><br></div>
   </section>
     
   <section id="tab_tabela" class="stage" style="display:none"> <!--tabela(WIP)-->
